--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -180,8 +180,62 @@ jobs:
       - name: Run example
         working-directory: v1/pendle/python
         run: ./.venv/bin/python src/main.py
-        
-  run-basic-examples-deposit-on-morpho-python: #
+
+  run-typescript-basic-examples-deposit-on-morpho: #
+    needs: [validate-environment, set-versions]
+
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      BASE_RPC_URL: http://localhost:8546
+      SERVER_URL: http://localhost:80
+      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+
+      - name: Install dependencies
+        working-directory: v1/transaction_bundler/typescript
+        run: |
+          npm install
+          if [[ "$NPM_PACKAGE_VERSION" != "latest" ]]; then
+            npm install @compass-labs/api-sdk@$NPM_PACKAGE_VERSION
+          fi
+          npm list
+
+      - name: Build application
+        working-directory: v1/basic_examples/deposit_on_morpho/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/basic_examples/deposit_on_morpho/typescript
+        run: npm run start
+
+
+  run-python----basic-examples-deposit-on-morpho: #
     needs: [validate-environment, set-versions]
     
     runs-on: ubuntu-latest
@@ -216,7 +270,7 @@ jobs:
           ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
 
       - name: Install dependencies
-        working-directory: v1/basic_examples/deposit_on_morpho/python_example
+        working-directory: v1/basic_examples/deposit_on_morpho/python
         run: |
           if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
             echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
@@ -226,12 +280,67 @@ jobs:
           uv pip freeze
 
       - name: Run example
-        working-directory: v1/basic_examples/deposit_on_morpho/python_example
-        run: ./.venv/bin/python deposit_on_morpho.py #src/main.py
+        working-directory: v1/basic_examples/deposit_on_morpho/python
+        run: ./.venv/bin/python main.py #src/main.py
         
-  run-basic-examples-deposit-on-aave-python:
+
+  run-typescript-basic-examples-deposit-on-aave:
     needs: [validate-environment, set-versions]
     
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      BASE_RPC_URL: http://localhost:8546
+      SERVER_URL: http://localhost:80
+      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+
+      - name: Install dependencies
+        working-directory: v1/transaction_bundler/typescript
+        run: |
+          npm install
+          if [[ "$NPM_PACKAGE_VERSION" != "latest" ]]; then
+            npm install @compass-labs/api-sdk@$NPM_PACKAGE_VERSION
+          fi
+          npm list
+
+      - name: Build application
+        working-directory: v1/basic_examples/deposit_on_aave/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/basic_examples/deposit_on_aave/typescript
+        run: npm run start
+
+
+  run-python----basic-examples-deposit-on-aave:
+    needs: [validate-environment, set-versions]
+
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
@@ -264,7 +373,7 @@ jobs:
           ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
 
       - name: Install dependencies
-        working-directory: v1/basic_examples/deposit_on_aave/python_example
+        working-directory: v1/basic_examples/deposit_on_aave/python
         run: |
           if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
             echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
@@ -274,10 +383,63 @@ jobs:
           uv pip freeze
 
       - name: Run example
-        working-directory: v1/basic_examples/deposit_on_aave/python_example
+        working-directory: v1/basic_examples/deposit_on_aave/python
         run: ./.venv/bin/python main.py #src/main.py
 
-  run-transaction_bundler_embed_a_fee_in_tx: #
+  run-typescript-transaction_bundler_embed_a_fee_in_tx: #
+    needs: [validate-environment, set-versions]
+
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      BASE_RPC_URL: http://localhost:8546
+      SERVER_URL: http://localhost:80
+      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+
+      - name: Install dependencies
+        working-directory: v1/transaction_bundler/typescript
+        run: |
+          npm install
+          if [[ "$NPM_PACKAGE_VERSION" != "latest" ]]; then
+            npm install @compass-labs/api-sdk@$NPM_PACKAGE_VERSION
+          fi
+          npm list
+
+      - name: Build application
+        working-directory: v1/transaction_bundler/embed_a_fee_in_bundle/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/transaction_bundler/embed_a_fee_in_bundle/typescript
+        run: npm run start
+
+  run-python----transaction_bundler_embed_a_fee_in_tx: #
     needs: [validate-environment, set-versions]
     
     runs-on: ubuntu-latest
