--- a/v1/basic_examples/deposit_on_aave/typescript/package.json
+++ b/v1/basic_examples/deposit_on_aave/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transaction_bundler_example",
+  "name": "deposit_on_aave_typescript_example",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
