--- a/v1/transaction_bundler/embed_a_fee_in_bundle/python/pyproject.toml
+++ b/v1/transaction_bundler/embed_a_fee_in_bundle/python/pyproject.toml
@@ -5,9 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "compass-api-sdk>=1.1.0",
-    "devtools>=0.12.2",
-    "dotenv>=0.9.9",
-    "web3>=7.13.0",
-    "ruff>=0.11.6",
+    "compass-api-sdk",
+    "devtools",
+    "dotenv",
+    "web3",
+    "ruff",
     ]
