--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -30,6 +30,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
       - name: Collect endpoints from spec (minus BROKEN)
         id: collect
         env:
@@ -38,3 +43,5 @@ jobs:
           python - <<'PY'
           import json, os, requests, sys
           API_URL = os.environ["API_URL"]
+          print("✅ Able to import requests and reach", API_URL)
+          PY
