--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -1,84 +1,22 @@
-name: Smoke test code samples (parallel)
+name: Minimal matrix demo
 
 on:
-  schedule:
-    - cron: "0 0 * * *"     # daily at 00:00 UTC
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   discover:
     runs-on: ubuntu-latest
     outputs:
-      paths: ${{ steps.collect.outputs.paths }}
-      count: ${{ steps.collect.outputs.count }}
+      items: ${{ steps.set-output.outputs.items }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install Python deps
+      - id: set-output
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
+          echo 'items={"item":["foo","bar"]}' >> $GITHUB_OUTPUT
 
-      - name: Collect endpoints from spec (minus BROKEN)
-        id: collect
-        env:
-          API_URL: "https://spec.speakeasy.com/compasslabs/api/compass-api-with-code-samples"
-        run: |
-          python - <<'PY'
-import json, os, requests, sys
-API_URL = os.environ["API_URL"]
-
-# Hard-coded BROKEN
-BROKEN = {
-    "/v0/aave/supply",
-    "/v0/aave/borrow",
-    "/v0/aave/repay",
-    "/v0/aave/withdraw",
-    "/v0/aave/historical_transactions/get",
-    "/v0/aerodrome_slipstream/swap/sell_exactly",
-    "/v0/aerodrome_slipstream/swap/buy_exactly",
-    "/v0/aerodrome_slipstream/liquidity_provision/mint",
-}
-
-def fetch_spec(url: str):
-    r = requests.get(url, timeout=(5,30))
-    r.raise_for_status()
-    return r.json()
-
-def has_python_sample(method_obj: dict) -> bool:
-    samples = (method_obj or {}).get("x-codeSamples") or []
-    for s in samples:
-        lang = (s.get("lang") or "").lower()
-        if lang.startswith("python"):
-            return True
-    return False
-
-spec = fetch_spec(API_URL)
-paths = []
-for p, methods in (spec.get("paths") or {}).items():
-    if p in BROKEN:
-        continue
-    if any(has_python_sample(methods.get(m, {})) for m in ("get","post")):
-        paths.append(p)
-
-# Cap to matrix limit (256 entries)
-paths = paths[:256]
-
-matrix = {"path": paths}
-print(f"Discovered {len(paths)} runnable paths")
-with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
-    fh.write(f"paths={json.dumps(matrix)}\n")
-    fh.write(f"count={len(paths)}\n")
-PY
-
-      - name: Echo matrix (debug)
-        run: |
-          echo "Discovered ${{ steps.collect.outputs.count }} paths"
-          echo '${{ steps.collect.outputs.paths }}'
+  echo-item:
+    needs: discover
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.discover.outputs.items) }}
+    steps:
+      - run: echo "Hello from ${{ matrix.item }}"
