--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -1,10 +1,32 @@
-name: Minimal matrix demo
+name: Smoke test code samples (parallel)
 
 on:
+  schedule:
+    - cron: "0 0 * * *"     # daily at 00:00 UTC
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   discover:
+#    runs-on: ubuntu-latest
+#    outputs:
+#      paths: ${{ steps.collect.outputs.paths }}
+#      count: ${{ steps.collect.outputs.count }}
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: "3.11"
+#
+#      - name: Install Python deps
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install requests
+
+
     runs-on: ubuntu-latest
     outputs:
       items: ${{ steps.set-output.outputs.items }}
@@ -20,3 +42,12 @@ jobs:
       matrix: ${{ fromJson(needs.discover.outputs.items) }}
     steps:
       - run: echo "Hello from ${{ matrix.item }}"
+
+#      - name: Collect endpoints from spec (minus BROKEN)
+#        id: collect
+#        env:
+#          API_URL: "https://spec.speakeasy.com/compasslabs/api/compass-api-with-code-samples"
+#        run: |
+#          python - <<'PY'
+#import json, os, requests, sys
+#API_URL = os.environ["API_URL"]
