--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
-      steps:
-      - id: collect
+
+      - name: collect
         run: |
           python - <<'PY'
           import json, os
@@ -34,7 +34,7 @@ jobs:
           values = ["foo", "bar"]
           matrix = {"item": values}
           print("Discovered:", matrix)
-          
+
           # Write to GitHub Actions output file
           with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
             fh.write(f"items={json.dumps(matrix)}\n")
