--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -24,20 +24,13 @@ jobs:
           pip install requests
 
       - id: collect
-        run: |
-          python - <<'PY'
-          import json, os
-          # Pretend we "discovered" 3 items
-          values = ["x", "y", "z"]
-          matrix = {"item": values}
-          print("Discovered:", matrix)
+      - run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-          # Write to GitHub Actions output file
-          with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
-            fh.write(f"items={json.dumps(matrix)}\n")
-          PY
-      - name: Echo raw output (debug)
-        run: echo "items = ${{ steps.collect.outputs.items }}"
+      - id: collect
+        run: python v1/test_sdk_snippets/discover_endpoints.py   # <-- run script
+      - run: echo "items = ${{ steps.collect.outputs.items }}"
 
   echo-item:
     needs: discover
