--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -37,4 +37,6 @@ jobs:
       # Fallback to an empty matrix if items is blank (prevents fromJson('') errors)
       matrix: ${{ fromJson(needs.discover.outputs.items != '' && needs.discover.outputs.items || '{"item":[]}' ) }}
     steps:
-      - run: echo "Hello from ${{ matrix.item }}"
+      - run: python v1/test_sdk_snippets/run_endpoint.py
+        env:
+          ENDPOINT: ${{ matrix.item }}
