--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -29,14 +29,20 @@ jobs:
 
   echo-item:
     needs: discover
-    # Only run if discover produced something JSON-ish
     if: ${{ needs.discover.outputs.items != '' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      # Fallback to an empty matrix if items is blank (prevents fromJson('') errors)
-      matrix: ${{ fromJson(needs.discover.outputs.items != '' && needs.discover.outputs.items || '{"item":[]}' ) }}
+      matrix: ${{ fromJson(needs.discover.outputs.items) }}
     steps:
+      - uses: actions/checkout@v4          # <-- required in every job
+      - uses: actions/setup-python@v5      # <-- fresh VM, set up Python again
+        with:
+          python-version: "3.11"
+      - name: Install Python deps          # <-- if your script needs them
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
       - run: python v1/test_sdk_snippets/run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
