--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install Python deps          # <-- if your script needs them
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests python-dotenv
       - run: python v1/test_sdk_snippets/run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
