--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -34,11 +34,11 @@ jobs:
 
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ARBITRUM_RPC_URL: http://localhost:8547
-      SERVER_URL: http://localhost:80
-      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
-      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+      #PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      #ARBITRUM_RPC_URL: http://localhost:8547
+      #SERVER_URL: http://localhost:80
+      #NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      #UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
 
     strategy:
       fail-fast: false
