--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -11,21 +11,29 @@ jobs:
     outputs:
       items: ${{ steps.collect.outputs.items }}   # <-- expose "items"
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
-      - name: Install Python deps
+      - name: Install dependencies
+        working-directory: v1/pendle/python
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
+          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
+            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
+            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          fi
+          uv sync
+          uv pip freeze
 
-      - id: collect
-        run: python v1/test_sdk_snippets/discover_endpoints.py   # <-- run script
-      - run: echo "items = ${{ steps.collect.outputs.items }}"
+      - name: collect
+        working-directory: v1/test_sdk_snippets
+        run: ./.venv/bin/python discover_endpoints.py
+
+#      - id: collect
+#        run: python v1/test_sdk_snippets/discover_endpoints.py   # <-- run script
+#      - run: echo "items = ${{ steps.collect.outputs.items }}"
 
   echo-item:
     needs: discover
