--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -55,20 +55,30 @@ jobs:
       #ARBITRUM_RPC_URL: http://localhost:8547
       #SERVER_URL: http://localhost:80
       #NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
-      #UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
 
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.discover.outputs.items) }}
     steps:
-      - uses: actions/checkout@v4          # <-- required in every job
-      - uses: actions/setup-python@v5      # <-- fresh VM, set up Python again
-        with:
-          python-version: "3.11"
-      - name: Install Python deps          # <-- if your script needs them
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Install dependencies
+        working-directory: v1/test_sdk_snippets
         run: |
-          python -m pip install --upgrade pip
-          pip install requests python-dotenv
-      - run: python v1/test_sdk_snippets/run_endpoint.py
+          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
+            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
+            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          fi
+          uv sync
+          uv pip freeze
+
+      - name: collect
+        working-directory: v1/test_sdk_snippets
+        run: ./.venv/bin/python run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
+#      - run: python v1/test_sdk_snippets/run_endpoint.py
+#        env:
+#          ENDPOINT: ${{ matrix.item }}
