--- a/.github/workflows/test_snippets.yml
+++ b/.github/workflows/test_snippets.yml
@@ -26,79 +26,86 @@ jobs:
           fi
           echo "✅ Environment '$ENVIRONMENT' is valid"
           echo "environment=$ENVIRONMENT" >> $GITHUB_OUTPUT
+
   discover:
     runs-on: ubuntu-latest
-
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      #PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      #ARBITRUM_RPC_URL: http://localhost:8547
-      #SERVER_URL: http://localhost:80
-      #NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
-      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
-
+      # Provide a default if the upstream job isn't present:
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version || 'latest' }}
     outputs:
-      items: ${{ steps.collect.outputs.items }}   # <-- expose "items"
+      items: ${{ steps.collect.outputs.items }}
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Install dependencies
-        working-directory: v1/test_sdk_snippets
         run: |
-          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
-            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
-            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies (uv)
+        working-directory: v1/test_sdk_snippets
+        env:
+          UV_VERSION: ${{ env.UV_PACKAGE_VERSION }}
+        run: |
+          # Default to latest if empty
+          UV_VERSION="${UV_VERSION:-latest}"
+          echo "UV_VERSION=$UV_VERSION"
+          # Create a venv and install deps needed by your scripts/snippets
+          uv venv .venv
+          source .venv/bin/activate
+          if [[ "$UV_VERSION" == "latest" ]]; then
+            uv pip install "compass-api-sdk" requests python-dotenv
+          else
+            uv pip install "compass-api-sdk==${UV_VERSION}" requests python-dotenv
           fi
-          uv sync
           uv pip freeze
 
-      - name: collect
+      - id: collect
+        name: Collect endpoints (writes items=... to $GITHUB_OUTPUT)
         working-directory: v1/test_sdk_snippets
         run: ./.venv/bin/python discover_endpoints.py
-
-#      - id: collect
-#        run: python v1/test_sdk_snippets/discover_endpoints.py   # <-- run script
-#      - run: echo "items = ${{ steps.collect.outputs.items }}"
 
   echo-item:
     needs: discover
     if: ${{ needs.discover.outputs.items != '' }}
     runs-on: ubuntu-latest
-
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      #PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      #ARBITRUM_RPC_URL: http://localhost:8547
-      #SERVER_URL: http://localhost:80
-      #NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
-      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
-
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version || 'latest' }}
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.discover.outputs.items) }}
-    steps:
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
-      - name: Install dependencies
-        working-directory: v1/test_sdk_snippets
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install uv
         run: |
-          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
-            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
-            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies (uv)
+        working-directory: v1/test_sdk_snippets
+        env:
+          UV_VERSION: ${{ env.UV_PACKAGE_VERSION }}
+        run: |
+          UV_VERSION="${UV_VERSION:-latest}"
+          echo "UV_VERSION=$UV_VERSION"
+          uv venv .venv
+          source .venv/bin/activate
+          if [[ "$UV_VERSION" == "latest" ]]; then
+            uv pip install "compass-api-sdk" requests python-dotenv
+          else
+            uv pip install "compass-api-sdk==${UV_VERSION}" requests python-dotenv
           fi
-          uv sync
           uv pip freeze
 
-      - name: collect
+      - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
         run: ./.venv/bin/python run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
-#      - run: python v1/test_sdk_snippets/run_endpoint.py
-#        env:
-#          ENDPOINT: ${{ matrix.item }}
