--- a/.github/workflows/test_python_sdk_snippets.yml
+++ b/.github/workflows/test_python_sdk_snippets.yml
@@ -25,12 +25,12 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets
+        working-directory: v1/test_sdk_snippets/python
         run: uv sync
 
       - id: collect
         name: Collect endpoints (writes items=... to $GITHUB_OUTPUT)
-        working-directory: v1/test_sdk_snippets
+        working-directory: v1/test_sdk_snippets/python
         run: uv run python discover_endpoints.py
 
       - name: Print collected items
@@ -61,11 +61,11 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets
+        working-directory: v1/test_sdk_snippets/python
         run: uv sync
 
       - name: Run endpoint snippet
-        working-directory: v1/test_sdk_snippets
+        working-directory: v1/test_sdk_snippets/python
         run: uv run python run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
