--- a/.github/workflows/test_typescript_sdk_snippets.yml
+++ b/.github/workflows/test_typescript_sdk_snippets.yml
@@ -66,6 +66,6 @@ jobs:
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets/python
-        run: uv run python run_endpoint.py
+        run: uv run python run_endpoint_ts.py
         env:
           ENDPOINT: ${{ matrix.item }}
