--- a/.github/workflows/test_typescript_sdk_snippets.yml
+++ b/.github/workflows/test_typescript_sdk_snippets.yml
@@ -75,7 +75,7 @@ jobs:
           npm init -y >/dev/null 2>&1 || true
           npm i -D tsx
           # Install the TS SDK used by snippets
-          npm i compass-api-sdk
+          npm i @compass-labs/api-sdk
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets/typescript
