--- a/.github/workflows/test_sdk_snippets.yml
+++ b/.github/workflows/test_sdk_snippets.yml
@@ -1,4 +1,4 @@
-name: test_typescript_sdk_snippets
+name: test_sdk_snippets
 
 on:
   pull_request:
@@ -25,12 +25,12 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets/typescript
+        working-directory: v1/test_sdk_snippets/python
         run: uv sync
 
       - id: collect
         name: Collect endpoints (writes items=... to $GITHUB_OUTPUT)
-        working-directory: v1/test_sdk_snippets/typescript
+        working-directory: v1/test_sdk_snippets/python
         run: uv run python discover_endpoints.py
 
       - name: Print collected items
@@ -41,7 +41,36 @@ jobs:
           echo "Collected items ✅ (pretty):"
           jq . items.json | tee items.pretty.json
 
-  test:
+  python:
+    needs: discover_sdk_snippets #
+    if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup uv and Python
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies (uv)
+        working-directory: v1/test_sdk_snippets/python
+        run: uv sync
+
+      - name: Run endpoint snippet
+        working-directory: v1/test_sdk_snippets/python
+        run: uv run python run_endpoint.py
+        env:
+          ENDPOINT: ${{ matrix.item }}
+
+  typescript:
     needs: discover_sdk_snippets #
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
