--- a/.github/workflows/test_sdk_snippets.yml
+++ b/.github/workflows/test_sdk_snippets.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets/python
+        working-directory: v1/test_sdk_snippets
         run: uv sync
 
       - id: collect
