--- a/v1/test_sdk_snippets/pyproject.toml
+++ b/v1/test_sdk_snippets/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "compass-api-sdk>=1.1.2",
     "dotenv>=0.9.9",
     "eth-account>=0.13.7",
+    "pyright>=1.1.405",
+    "ruff>=0.13.1",
     "web3>=7.12.0",
 ]
